  - Prevent notes polling when there are not notes
  - API: Add support for forking a project via the API (Bernhard Kaindl)
  - API: filter project issues by milestone (Julien Bianchi)
  - Fail harder in the backup script
  - Zen mode for wiki and milestones (Robert Schilling)
  - Move Emoji parsing to html-pipeline-gitlab (Robert Schilling)
  - Font Awesome 4.2 integration (Sullivan Senechal)

v 7.3.2
  - Fix creating new file via web editor
  - Use gitlab-shell v2.0.1

v 7.3.1
  - Fix ref parsing in Gitlab::GitAccess
  - Fix error 500 when viewing diff on a file with changed permissions
  - Fix adding comments to MR when source branch is master
  - Fix error 500 when searching description contains relative link

v 7.3.0
  - Always set the 'origin' remote in satellite actions
  - Write authorized_keys in tmp/ during tests
  - Use sockets to connect to Redis
  - Add dormant New Relic gem (can be enabled via environment variables)
  - Expire Rack sessions after 1 week
  - Cleaner signin/signup pages
  - Improved comments UI
  - Better search with filtering, pagination etc
  - Added a checkbox to toggle line wrapping in diff (Yuriy Glukhov)
  - Prevent project stars duplication when fork project
  - Use the default Unicorn socket backlog value of 1024
  - Support Unix domain sockets for Redis
  - Store session Redis keys in 'session:gitlab:' namespace
  - Deprecate LDAP account takeover based on partial LDAP email / GitLab username match
  - Use /bin/sh instead of Bash in bin/web, bin/background_jobs (Pavel Novitskiy)
  - Keyboard shortcuts for productivity (Robert Schilling)
  - API: filter issues by state (Julien Bianchi)
  - API: filter issues by labels (Julien Bianchi)
  - Add system hook for ssh key changes
  - Add blob permalink link (Ciro Santilli)
  - Create annotated tags through UI and API (Sean Edge)
  - Snippets search (Charles Bushong)
  - Comment new push to existing MR
  - Add 'ci' to the blacklist of forbidden names