@@ -28,8 +28,11 @@
 
   - @service.fields.each do |field|
     - name = field[:name]
+    - value = @service.send(name)
     - type = field[:type]
     - placeholder = field[:placeholder]
+    - choices = field[:choices]
+    - default_choice = field[:default_choice]
 
     .form-group
       = f.label name, class: "control-label"
@@ -40,6 +43,8 @@
           = f.text_area name, rows: 5, class: "form-control", placeholder: placeholder
         - elsif type == 'checkbox'
           = f.check_box name
+        - elsif type == 'select'
+          = f.select name, options_for_select(choices, value ? value : default_choice), {}, { class: "form-control" }
 
   .form-actions
     = f.submit 'Save', class: 'btn btn-save'
